<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.TrackingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_tracking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/tracking"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tracking_start_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">


                    <ImageView
                        android:id="@+id/icon_ready_status"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/connection_ready"
                        app:layout_constraintBottom_toBottomOf="@+id/text_ready_status"
                        app:layout_constraintEnd_toStartOf="@+id/text_ready_status"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/text_ready_status"
                        app:tint="@color/greenReady"
                        tools:src="@drawable/ic_connected" />

                    <TextView
                        android:id="@+id/text_ready_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                        android:textColor="@color/greenReady"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/icon_ready_status"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/connected" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/start_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_ready_status"
                        app:layout_constraintVertical_bias="0.0"
                        app:icon="@drawable/ic_start"
                        android:text="@string/start" />

                    <TextView
                        android:id="@+id/text_tap"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/connect_message"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_tap"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/icon_tap"
                        app:layout_constraintTop_toTopOf="@+id/icon_tap" />

                    <ImageView
                        android:id="@+id/icon_tap"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginTop="16dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/approach_nfc"
                        android:cropToPadding="false"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_tap"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_ready_status" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tracking_measure_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pause_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/pause"
                        app:icon="@drawable/ic_pause"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/stop_button"
                        app:layout_constraintTop_toBottomOf="@+id/info_duration"
                        app:layout_constraintVertical_bias="0.0" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/stop_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/stop"
                        app:icon="@drawable/ic_stop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/pause_button"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_duration"
                        app:layout_constraintVertical_bias="0.413" />

                    <TextView
                        android:id="@+id/info_avg_speed"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="@+id/textView8"
                        app:layout_constraintStart_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/textView8"
                        tools:text="19" />

                    <TextView
                        android:id="@+id/info_duration"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="@+id/info_distance"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/textView11"
                        tools:text="15:20:23" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/distance_traveled"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/info_speed" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/average_speed"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintEnd_toStartOf="@+id/textView9"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_speed" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/current_speed"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/info_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        tools:text="25" />

                    <TextView
                        android:id="@+id/info_distance"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                        android:textColor="@color/colorPrimary"
                        app:autoSizeTextType="uniform"
                        app:layout_constraintEnd_toEndOf="@+id/textView9"
                        app:layout_constraintStart_toStartOf="@+id/textView9"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        tools:text="120" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="km/h"
                        android:textAlignment="viewEnd"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        app:layout_constraintBottom_toBottomOf="@+id/info_speed"
                        app:layout_constraintStart_toEndOf="@+id/info_speed"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Duration"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintEnd_toEndOf="@+id/textView9"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/info_avg_speed" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>